# vec

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  package.json
.github/workflows/: cmake.yml
cmake/: CodeCoverage.cmake
src/: vec.c  vec.h  vec_config_default.h
test/: test_custom.c  test_help.h  test_main.c  test_mem.c  test_stats.c  test_vec.c  test_vec_custom.c  test_vec_fixed.c  test_vec_functional.c  test_vec_mem_failures.c  test_vec_ops.c  vec_config_test.h
